# 3D

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  src.cmake
src/editor/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/frameworks/: frameworks.cmake
src/frameworks/window/: CMakeLists.txt  pch.cpp  pch.hpp  test.cpp  window.cpp  window.hpp
src/frameworks/window/win64/: Manager_windows.cpp  Manager_windows.hpp  PCH.hpp  Window_class_register.cpp  Window_windows.cpp  Window_windows.hpp  manager.cpp  window.cpp  window.hpp
src/game/: CMakeLists.txt
src/platform/: platform.cmake
src/platform/win64/: platform.hpp
src/utilities/: CMakeLists.txt  pch.cpp  pch.hpp  utilities.cpp
src/utilities/Object/: Object.cpp  Object.hpp  object.cmake
src/utilities/basic/: Align.hpp  Assert.hpp  BreakToDebug.hpp  CallConvention.hpp  Log.hpp
src/utilities/containers/: Singleton.hpp  test.cpp
